<resources>
    <string name="app_name">VideoTalk</string>
    <string name="join_jn">加入</string>
    <string name="app_version">V1.0.0</string>
    <string name="join_in_rule">若会议号不存在,你将创建会议并加入;若会议号存在，你将加入该会议直接通讯</string>
    <string name="login_setting">设置</string>
    <string name="save_setting">保存设置</string>
    <string name="tip_appid_not_null">APP ID不能为空</string>
    <string name="tip_server_address_not_null">服务器地址不能为空</string>
    <string name="tip_server_port_not_null">端口不能为空</string>
    <string name="hd_setting_custom">自定义画质</string>
    <string name="hd_setting">画质设置</string>
    <string name="hd_resolution">分辨率</string>
    <string name="hd_frame">帧率</string>
    <string name="hd_rate">码率</string>
    <string name="cancel">取消</string>
    <string name="default_appid">fbe957d1-c25a-4992-9e75-d993294a5d56</string>
    <string name="default_server_addr">cloud.anychat.cn</string>
    <string name="default_server_port">8906</string>
    <string name="port">端口：</string>
    <string name="server_addr">服务器地址：</string>
    <string name="app_id">APP ID：</string>
    <string name="sdk_version">SDK 版本：</string>
    <string name="default_sdk_version">VComm Android SDK v1.0.0</string>
    <string name="empty_user">用户名为空</string>
    <string name="empty_room">房间名为空</string>
    <string name="please_input_meeting">请输入会议号</string>
    <string name="please_input_user">请输入用户名</string>
    <string name="upload_log">上传日志</string>
    <string name="basic_info">基本信息</string>
</resources>
