<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4C9AFF"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <ImageButton
        android:id="@+id/ib_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/ic_setting"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/lv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:background="@drawable/ic_login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lv_logo" />

    <ImageView
        android:id="@+id/iv_user"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <com.videocomm.view.LastInputEditText
        android:id="@+id/et_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:hint="@string/please_input_user"
        android:text="VideoCommUser"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/line1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_user" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user" />

    <ImageView
        android:id="@+id/iv_room"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/ic_room"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_user" />

    <EditText
        android:id="@+id/et_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="40dp"
        android:background="@null"
        android:hint="@string/please_input_meeting"
        android:text="1001"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@id/line2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_room" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="40dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_room" />


    <TextView
        android:id="@+id/tv_rule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="35dp"
        android:text="@string/join_in_rule"
        android:textColor="#cccccc"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2" />

    <Button
        android:id="@+id/btn_join_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_selector"
        android:text="@string/join_jn"
        android:textColor="#4C9AFF"
        app:layout_constraintDimensionRatio="h,1:0.16"
        app:layout_constraintEnd_toEndOf="@id/et_user"
        app:layout_constraintStart_toStartOf="@id/iv_user"
        app:layout_constraintTop_toBottomOf="@id/tv_rule" />

    <TextView
        android:id="@+id/tv_app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/app_version"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>