<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dla_rect_white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:padding="5dp"
            android:text="@string/hd_setting"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/iv_dlg_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_black_down"
            android:textColor="#3478f7" />
    </RelativeLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/transparent_2" />

    <ListView
        android:id="@+id/lv_hd_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hd_resolution" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sb_resolution"
                style="@style/seekBarCustonStyle" />

            <TextView
                android:id="@+id/tv_resolution"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="320 x 240" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hd_frame" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sb_frame"
                style="@style/seekBarCustonStyle" />

            <TextView
                android:id="@+id/tv_frame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="5 f/s" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hd_rate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <SeekBar
                android:id="@+id/sb_rate"
                style="@style/seekBarCustonStyle" />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="100 kb/s" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>